# Collaboration-Mechanisms-for-LLM-Agents

./: README.md  pyproject.toml
notes/: gpt3.5_oneshot.ipynb  llama2_collaboration.ipynb  llama2_oneshot.ipynb
