[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["yoshino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.1"
jupyterlab = "^4.0.7"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
llama-cpp-python = "^0.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
